docs: add documentation of get users
